lib/regexParser.js
// Generated from /Users/eliangonzalez/Documents/Semestres/2023-02/Lenguajes/regexVisualizer/jstest/regexParser.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import regexParserListener from './regexParserListener.js';
import regexParserVisitor from './regexParserVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class regexParser extends antlr4.Parser {

    static grammarFileName = "regexParser.g4";
    static literalNames = [ null, "'('", "')'", "'|'", "'+'", "'?'", "'*'", 
                            "'.'", null, "'{'", null, null, null, null, 
                            null, null, null, null, "','", null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, "']'", "'-'" ];
    static symbolicNames = [ null, "LPAREN", "RPAREN", "PIPE", "PLUS", "QUESTION", 
                             "STAR", "WildcardEsc", "Char", "StartQuantity", 
                             "SingleCharEsc", "MultiCharEsc", "CatEsc", 
                             "ComplEsc", "NegCharGroup", "PosCharGroup", 
                             "EndQuantity", "QuantExact", "COMMA", "EndCategory", 
                             "IsCategory", "Letters", "Marks", "Numbers", 
                             "Punctuation", "Separators", "Symbols", "Others", 
                             "IsBlock", "NestedSingleCharEsc", "NestedMultiCharEsc", 
                             "NestedCatEsc", "NestedComplEsc", "NestedNegCharGroup", 
                             "NestedPosCharGroup", "EndCharGroup", "DASH", 
                             "XmlChar" ];
    static ruleNames = [ "root", "regExp", "branch", "piece", "quantifier", 
                         "quantity", "quantRange", "quantMin", "atom", "charClass", 
                         "charClassExpr", "charGroup", "posCharGroup", "charRange", 
                         "seRange", "charOrEsc", "charClassEsc", "catEsc", 
                         "complEsc", "charProp" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = regexParser.ruleNames;
        this.literalNames = regexParser.literalNames;
        this.symbolicNames = regexParser.symbolicNames;
    }



	root() {
	    let localctx = new RootContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, regexParser.RULE_root);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 40;
	        this.regExp();
	        this.state = 41;
	        this.match(regexParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	regExp() {
	    let localctx = new RegExpContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, regexParser.RULE_regExp);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 43;
	        this.branch();
	        this.state = 48;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===3) {
	            this.state = 44;
	            this.match(regexParser.PIPE);
	            this.state = 45;
	            this.branch();
	            this.state = 50;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	branch() {
	    let localctx = new BranchContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, regexParser.RULE_branch);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 54;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 3758161282) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 7) !== 0)) {
	            this.state = 51;
	            this.piece();
	            this.state = 56;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	piece() {
	    let localctx = new PieceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, regexParser.RULE_piece);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 57;
	        this.atom();
	        this.state = 59;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 624) !== 0)) {
	            this.state = 58;
	            this.quantifier();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	quantifier() {
	    let localctx = new QuantifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, regexParser.RULE_quantifier);
	    try {
	        this.state = 68;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 5:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 61;
	            this.match(regexParser.QUESTION);
	            break;
	        case 6:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 62;
	            this.match(regexParser.STAR);
	            break;
	        case 4:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 63;
	            this.match(regexParser.PLUS);
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 64;
	            this.match(regexParser.StartQuantity);
	            this.state = 65;
	            this.quantity();
	            this.state = 66;
	            this.match(regexParser.EndQuantity);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	quantity() {
	    let localctx = new QuantityContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, regexParser.RULE_quantity);
	    try {
	        this.state = 73;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 70;
	            this.quantRange();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 71;
	            this.quantMin();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 72;
	            this.match(regexParser.QuantExact);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	quantRange() {
	    let localctx = new QuantRangeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, regexParser.RULE_quantRange);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 75;
	        this.match(regexParser.QuantExact);
	        this.state = 76;
	        this.match(regexParser.COMMA);
	        this.state = 77;
	        this.match(regexParser.QuantExact);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	quantMin() {
	    let localctx = new QuantMinContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, regexParser.RULE_quantMin);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 79;
	        this.match(regexParser.QuantExact);
	        this.state = 80;
	        this.match(regexParser.COMMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom() {
	    let localctx = new AtomContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, regexParser.RULE_atom);
	    try {
	        this.state = 88;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 8:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 82;
	            this.match(regexParser.Char);
	            break;
	        case 7:
	        case 10:
	        case 11:
	        case 12:
	        case 13:
	        case 14:
	        case 15:
	        case 29:
	        case 30:
	        case 31:
	        case 32:
	        case 33:
	        case 34:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 83;
	            this.charClass();
	            break;
	        case 1:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 84;
	            this.match(regexParser.LPAREN);
	            this.state = 85;
	            this.regExp();
	            this.state = 86;
	            this.match(regexParser.RPAREN);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	charClass() {
	    let localctx = new CharClassContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, regexParser.RULE_charClass);
	    try {
	        this.state = 93;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 10:
	        case 11:
	        case 12:
	        case 13:
	        case 29:
	        case 30:
	        case 31:
	        case 32:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 90;
	            this.charClassEsc();
	            break;
	        case 14:
	        case 15:
	        case 33:
	        case 34:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 91;
	            this.charClassExpr();
	            break;
	        case 7:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 92;
	            this.match(regexParser.WildcardEsc);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	charClassExpr() {
	    let localctx = new CharClassExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, regexParser.RULE_charClassExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 95;
	        _la = this._input.LA(1);
	        if(!(((((_la - 14)) & ~0x1f) === 0 && ((1 << (_la - 14)) & 1572867) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 96;
	        this.charGroup();
	        this.state = 97;
	        this.match(regexParser.EndCharGroup);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	charGroup() {
	    let localctx = new CharGroupContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, regexParser.RULE_charGroup);
	    var _la = 0;
	    try {
	        this.state = 114;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 100;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	            if(la_===1) {
	                this.state = 99;
	                this.posCharGroup();

	            }
	            this.state = 102;
	            this.match(regexParser.DASH);
	            this.state = 103;
	            this.match(regexParser.DASH);
	            this.state = 104;
	            this.charClassExpr();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 105;
	            this.posCharGroup();
	            this.state = 106;
	            this.match(regexParser.DASH);
	            this.state = 107;
	            this.charClassExpr();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 109;
	            this.posCharGroup();
	            this.state = 111;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===36) {
	                this.state = 110;
	                this.match(regexParser.DASH);
	            }

	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 113;
	            this.match(regexParser.DASH);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	posCharGroup() {
	    let localctx = new PosCharGroupContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, regexParser.RULE_posCharGroup);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 117;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===36) {
	            this.state = 116;
	            this.match(regexParser.DASH);
	        }

	        this.state = 121; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 121;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 119;
	                this.charRange();
	                break;

	            case 2:
	                this.state = 120;
	                this.charClassEsc();
	                break;

	            }
	            this.state = 123; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(((((_la - 10)) & ~0x1f) === 0 && ((1 << (_la - 10)) & 142082063) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	charRange() {
	    let localctx = new CharRangeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, regexParser.RULE_charRange);
	    try {
	        this.state = 127;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 125;
	            this.seRange();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 126;
	            this.match(regexParser.XmlChar);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	seRange() {
	    let localctx = new SeRangeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, regexParser.RULE_seRange);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 129;
	        this.charOrEsc();
	        this.state = 130;
	        this.match(regexParser.DASH);
	        this.state = 131;
	        this.charOrEsc();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	charOrEsc() {
	    let localctx = new CharOrEscContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, regexParser.RULE_charOrEsc);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        _la = this._input.LA(1);
	        if(!(_la===10 || _la===37)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	charClassEsc() {
	    let localctx = new CharClassEscContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, regexParser.RULE_charClassEsc);
	    try {
	        this.state = 141;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 10:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 135;
	            this.match(regexParser.SingleCharEsc);
	            break;
	        case 29:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 136;
	            this.match(regexParser.NestedSingleCharEsc);
	            break;
	        case 11:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 137;
	            this.match(regexParser.MultiCharEsc);
	            break;
	        case 30:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 138;
	            this.match(regexParser.NestedMultiCharEsc);
	            break;
	        case 12:
	        case 31:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 139;
	            this.catEsc();
	            break;
	        case 13:
	        case 32:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 140;
	            this.complEsc();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	catEsc() {
	    let localctx = new CatEscContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, regexParser.RULE_catEsc);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 143;
	        _la = this._input.LA(1);
	        if(!(_la===12 || _la===31)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 144;
	        this.charProp();
	        this.state = 145;
	        this.match(regexParser.EndCategory);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	complEsc() {
	    let localctx = new ComplEscContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, regexParser.RULE_complEsc);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 147;
	        _la = this._input.LA(1);
	        if(!(_la===13 || _la===32)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 148;
	        this.charProp();
	        this.state = 149;
	        this.match(regexParser.EndCategory);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	charProp() {
	    let localctx = new CharPropContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, regexParser.RULE_charProp);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 151;
	        _la = this._input.LA(1);
	        if(!(_la===20 || _la===28)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

regexParser.EOF = antlr4.Token.EOF;
regexParser.LPAREN = 1;
regexParser.RPAREN = 2;
regexParser.PIPE = 3;
regexParser.PLUS = 4;
regexParser.QUESTION = 5;
regexParser.STAR = 6;
regexParser.WildcardEsc = 7;
regexParser.Char = 8;
regexParser.StartQuantity = 9;
regexParser.SingleCharEsc = 10;
regexParser.MultiCharEsc = 11;
regexParser.CatEsc = 12;
regexParser.ComplEsc = 13;
regexParser.NegCharGroup = 14;
regexParser.PosCharGroup = 15;
regexParser.EndQuantity = 16;
regexParser.QuantExact = 17;
regexParser.COMMA = 18;
regexParser.EndCategory = 19;
regexParser.IsCategory = 20;
regexParser.Letters = 21;
regexParser.Marks = 22;
regexParser.Numbers = 23;
regexParser.Punctuation = 24;
regexParser.Separators = 25;
regexParser.Symbols = 26;
regexParser.Others = 27;
regexParser.IsBlock = 28;
regexParser.NestedSingleCharEsc = 29;
regexParser.NestedMultiCharEsc = 30;
regexParser.NestedCatEsc = 31;
regexParser.NestedComplEsc = 32;
regexParser.NestedNegCharGroup = 33;
regexParser.NestedPosCharGroup = 34;
regexParser.EndCharGroup = 35;
regexParser.DASH = 36;
regexParser.XmlChar = 37;

regexParser.RULE_root = 0;
regexParser.RULE_regExp = 1;
regexParser.RULE_branch = 2;
regexParser.RULE_piece = 3;
regexParser.RULE_quantifier = 4;
regexParser.RULE_quantity = 5;
regexParser.RULE_quantRange = 6;
regexParser.RULE_quantMin = 7;
regexParser.RULE_atom = 8;
regexParser.RULE_charClass = 9;
regexParser.RULE_charClassExpr = 10;
regexParser.RULE_charGroup = 11;
regexParser.RULE_posCharGroup = 12;
regexParser.RULE_charRange = 13;
regexParser.RULE_seRange = 14;
regexParser.RULE_charOrEsc = 15;
regexParser.RULE_charClassEsc = 16;
regexParser.RULE_catEsc = 17;
regexParser.RULE_complEsc = 18;
regexParser.RULE_charProp = 19;

class RootContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = regexParser.RULE_root;
    }

	regExp() {
	    return this.getTypedRuleContext(RegExpContext,0);
	};

	EOF() {
	    return this.getToken(regexParser.EOF, 0);
	};

	enterRule(listener) {
	    if(listener instanceof regexParserListener ) {
	        listener.enterRoot(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof regexParserListener ) {
	        listener.exitRoot(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof regexParserVisitor ) {
	        return visitor.visitRoot(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class RegExpContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = regexParser.RULE_regExp;
    }

	branch = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(BranchContext);
	    } else {
	        return this.getTypedRuleContext(BranchContext,i);
	    }
	};

	PIPE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(regexParser.PIPE);
	    } else {
	        return this.getToken(regexParser.PIPE, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof regexParserListener ) {
	        listener.enterRegExp(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof regexParserListener ) {
	        listener.exitRegExp(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof regexParserVisitor ) {
	        return visitor.visitRegExp(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class BranchContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = regexParser.RULE_branch;
    }

	piece = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(PieceContext);
	    } else {
	        return this.getTypedRuleContext(PieceContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof regexParserListener ) {
	        listener.enterBranch(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof regexParserListener ) {
	        listener.exitBranch(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof regexParserVisitor ) {
	        return visitor.visitBranch(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class PieceContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = regexParser.RULE_piece;
    }

	atom() {
	    return this.getTypedRuleContext(AtomContext,0);
	};

	quantifier() {
	    return this.getTypedRuleContext(QuantifierContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof regexParserListener ) {
	        listener.enterPiece(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof regexParserListener ) {
	        listener.exitPiece(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof regexParserVisitor ) {
	        return visitor.visitPiece(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class QuantifierContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = regexParser.RULE_quantifier;
    }

	QUESTION() {
	    return this.getToken(regexParser.QUESTION, 0);
	};

	STAR() {
	    return this.getToken(regexParser.STAR, 0);
	};

	PLUS() {
	    return this.getToken(regexParser.PLUS, 0);
	};

	StartQuantity() {
	    return this.getToken(regexParser.StartQuantity, 0);
	};

	quantity() {
	    return this.getTypedRuleContext(QuantityContext,0);
	};

	EndQuantity() {
	    return this.getToken(regexParser.EndQuantity, 0);
	};

	enterRule(listener) {
	    if(listener instanceof regexParserListener ) {
	        listener.enterQuantifier(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof regexParserListener ) {
	        listener.exitQuantifier(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof regexParserVisitor ) {
	        return visitor.visitQuantifier(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class QuantityContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = regexParser.RULE_quantity;
    }

	quantRange() {
	    return this.getTypedRuleContext(QuantRangeContext,0);
	};

	quantMin() {
	    return this.getTypedRuleContext(QuantMinContext,0);
	};

	QuantExact() {
	    return this.getToken(regexParser.QuantExact, 0);
	};

	enterRule(listener) {
	    if(listener instanceof regexParserListener ) {
	        listener.enterQuantity(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof regexParserListener ) {
	        listener.exitQuantity(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof regexParserVisitor ) {
	        return visitor.visitQuantity(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class QuantRangeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = regexParser.RULE_quantRange;
    }
